@@ -12,14 +12,14 @@ gtk.glade.textdomain (DOMAIN)
 VERSION = "@VERSION@"
 APPNAME = _("glChess")
 
-APP_DATA_DIR = os.path.join('@prefix@', 'share') 
-ICON_DIR =     os.path.join(APP_DATA_DIR,'pixmaps')
-TEXTURE_DIR = os.path.join(ICON_DIR,'glchess')
-GLADE_DIR = os.path.join(APP_DATA_DIR,'glchess')
-BASE_DIR = os.path.join(APP_DATA_DIR,'glchess')
+APP_DATA_DIR    = os.path.join('@prefix@', 'share') 
+ICON_DIR        = os.path.join(APP_DATA_DIR, 'pixmaps')
+TEXTURE_DIR     = os.path.join(ICON_DIR, 'glchess')
+GLADE_DIR       = os.path.join(APP_DATA_DIR, 'glchess')
+BASE_DIR        = os.path.join(APP_DATA_DIR, 'glchess')
 
-DATA_DIR = os.path.expanduser('~/.gnome2/glchess/')
+DATA_DIR        = os.path.expanduser('~/.gnome2/glchess/')
+CONFIG_FILE     = os.path.join(DATA_DIR, 'config.xml')
+LOCAL_AI_CONFIG = os.path.join(DATA_DIR, 'ai.xml')
 
-def initialize_games_dir ():
-    if not os.path.exists(DATA_DIR): os.makedirs(DATA_DIR)
-
+if not os.path.exists(DATA_DIR): os.makedirs(DATA_DIR)
