@@ -1,6 +1,9 @@
 ------------------------------------------------------------------------------
 CHANGELOG
 ------------------------------------------------------------------------------
+2006-12-01  Robert Ancell  <bob27@users.sourceforge.net>
+	* Added configuration module that uses GConf when available
+
 2006-11-27  Robert Ancell  <bob27@users.sourceforge.net>
 	* Applied HIG patch from (Gnome bug #379294).
 	* Disable "Save As" menu item when no game selected.
